archetect-templating/tests/snapshots/test_parser__parser@autoescape.txt.snap
---
source: archetect_minijinja/tests/test_parser.rs
description: "{% autoescape false %}foo{% endautoescape %}"
input_file: archetect_minijinja/tests/parser-inputs/autoescape.txt
---
Ok(
    Template {
        children: [
            AutoEscape {
                enabled: Const {
                    value: false,
                } @ 1:14-1:19,
                body: [
                    EmitRaw {
                        raw: "foo",
                    } @ 1:22-1:25,
                ],
            } @ 1:3-1:41,
        ],
    } @ 0:0-1:44,
)
