archetect-templating/tests/snapshots/test_parser__parser@extends.txt.snap
---
source: archetect_minijinja/tests/test_parser.rs
description: "{% extends \"layout.html\" %}\n{% block title %}new title{% endblock %}\n{% block body %}new body{% endblock %}"
input_file: archetect_minijinja/tests/parser-inputs/extends.txt
---
Ok(
    Template {
        children: [
            Extends {
                name: Const {
                    value: "layout.html",
                } @ 1:11-1:24,
            } @ 1:3-1:24,
            EmitRaw {
                raw: "\n",
            } @ 1:27-2:0,
            Block {
                name: "title",
                body: [
                    EmitRaw {
                        raw: "new title",
                    } @ 2:17-2:26,
                ],
            } @ 2:3-2:37,
            EmitRaw {
                raw: "\n",
            } @ 2:40-3:0,
            Block {
                name: "body",
                body: [
                    EmitRaw {
                        raw: "new body",
                    } @ 3:16-3:24,
                ],
            } @ 3:3-3:35,
        ],
    } @ 0:0-3:38,
)
