archetect-templating/tests/snapshots/test_parser__parser@filter_block.txt.snap
---
source: archetect_minijinja/tests/test_parser.rs
description: "{% filter foo|bar(1, 2)|baz %}...{% endfilter %}"
input_file: archetect_minijinja/tests/parser-inputs/filter_block.txt
---
Ok(
    Template {
        children: [
            FilterBlock {
                filter: Filter {
                    name: "baz",
                    expr: Some(
                        Filter {
                            name: "bar",
                            expr: Some(
                                Filter {
                                    name: "foo",
                                    expr: None,
                                    args: [],
                                } @ 1:10-1:13,
                            ),
                            args: [
                                Const {
                                    value: 1,
                                } @ 1:18-1:19,
                                Const {
                                    value: 2,
                                } @ 1:21-1:22,
                            ],
                        } @ 1:14-1:23,
                    ),
                    args: [],
                } @ 1:24-1:27,
                body: [
                    EmitRaw {
                        raw: "...",
                    } @ 1:30-1:33,
                ],
            } @ 1:3-1:45,
        ],
    } @ 0:0-1:48,
)
