archetect-templating/tests/snapshots/test_parser__parser@getattr.txt.snap
---
source: archetect_minijinja/tests/test_parser.rs
description: "{{ foo.bar.baz }}"
input_file: archetect_minijinja/tests/parser-inputs/getattr.txt
---
Ok(
    Template {
        children: [
            EmitExpr {
                expr: GetAttr {
                    expr: GetAttr {
                        expr: Var {
                            id: "foo",
                        } @ 1:3-1:6,
                        name: "bar",
                    } @ 1:3-1:10,
                    name: "baz",
                } @ 1:6-1:14,
            } @ 1:0-1:14,
        ],
    } @ 0:0-1:17,
)
